Fixed x-overflow bug

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,11 +10,13 @@
 
 a{
   color: #333;
+  text-decoration: none;
 }
 
 body {
   font-family: 'IBM Plex Mono', monospace;
   color: #333;
+  overflow-x: hidden; 
 }
 
 .body{
